--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>GFG</title>
 </head>
 <body>
-    <h1>Hello World this is my first web page.</h1>
+    <script type="application/json" id="stuff">
+    {
+        "unicorns": "awesome",
+        "abc": [1, 2, 3],
+        "badentry": "blah </script><div id='baddiv'>I should not exist.</div><script type="application/json" id='stuff'> ",
+    }
+    </script>
 </body>
 </html>
