--- a/index.html
+++ b/index.html
@@ -7,12 +7,40 @@
     <title>GFG</title>
 </head>
 <body>
-    <script type="application/json" id="stuff">
-    {
-        "unicorns": "awesome",
-        "abc": [1, 2, 3],
-        "badentry": "blah </script><div id='baddiv'>I should not exist.</div><script type="application/json" id='stuff'> ",
-    }
-    </script>
+    <pre>
+        <code>
+        [
+            {
+                color: "red",
+                value: "#f00"
+            },
+            {
+                color: "green",
+                value: "#0f0"
+            },
+            {
+                color: "blue",
+                value: "#00f"
+            },
+            {
+                color: "cyan",
+                value: "#0ff"
+            },
+            {
+                color: "magenta",
+                value: "#f0f"
+            },
+            {
+                color: "yellow",
+                value: "#ff0"
+            },
+            {
+                color: "black",
+                value: "#000"
+            }
+        ]
+        
+        </code>
+    </pre>
 </body>
 </html>
